# cbrec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: config.toml.example  default.toml
docs/: chaturbate_api_map.md  lluvia_de_ideas_600.md  threat_model.md
packaging/arch/: PKGBUILD  PKGBUILD.template
scripts/: release.sh
src/: main.rs
src/application/: README.md  cli_controller.rs  mod.rs  recording.rs  utils.rs  watch_service.rs
src/application/commands/: add.rs  check.rs  doctor.rs  list.rs  mod.rs  record.rs  remove.rs
src/domain/: errors.rs  mod.rs
src/domain/repositories/: mod.rs  stream_repository.rs
src/domain/value_objects/: mod.rs  model_name.rs  model_state.rs  stream_url.rs  video_quality.rs
src/infrastructure/: errors.rs  mod.rs
src/infrastructure/config/: app_config.rs  mod.rs
src/presentation/: mod.rs  output.rs
src/presentation/cli/: commands.rs
tests/: cli.rs
wix/: main.wxs  main.wxs.in
