[package]
name = "cbrec"
version = "0.0.2"
edition = "2021"
authors = ["Lucas"]
description = "Simple and efficient stream recorder"
license = "MIT"
repository = "https://github.com/Duna-tools/cbrec"
homepage = "https://github.com/Duna-tools/cbrec"

[package.metadata]
# Contact info used by packaging tools when available
maintainer = "Lucas <lucas@users.noreply.github.com>"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "stream", "rustls-tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Bytes
bytes = "1.5"
libc = "0.2.180"
directories = "5.0"
quick-m3u8 = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Lucas"
depends = "$auto, ffmpeg"
section = "video"
priority = "optional"
assets = [
  ["target/release/cbrec", "usr/bin/cbrec", "755"],
  ["README.md", "usr/share/doc/cbrec/README.md", "644"],
  ["LICENSE", "usr/share/doc/cbrec/LICENSE", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Simple and efficient stream recorder"
assets = [
  { source = "target/release/cbrec", dest = "/usr/bin/cbrec", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/cbrec/README.md", mode = "644" },
  { source = "LICENSE", dest = "/usr/share/doc/cbrec/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
ffmpeg = "*"
